--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
-    <p class="test">Git Pages?</p>
+    <p class="test">Git Pages?!</p>
     <img src="item03.png" alt="">
 </body>
 </html>
