メッセージ

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p class="test">Git Pages?!</p>
-    <img src="item03.png" alt="">
+    <img src="https://www.rakuten.ne.jp/gold/f052094-kazuno/images/action_01.jpg" alt="">
 </body>
 </html>
