メッセージ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
-    <p class="test">Git Pages?!</p>
-    <img src="https://www.rakuten.ne.jp/gold/f052094-kazuno/images/action_04.jpg" alt="">
+    <p class="test">Git Pages?!sss</p>
+    <img src="https://www.rakuten.ne.jp/gold/f052094-kazuno/images/action_05.jpg" alt="">
 </body>
 </html>
